[gd_scene load_steps=4 format=3 uid="uid://cyb3dlskfxrim"]

[ext_resource type="Script" path="res://scripts/items/scissors.gd" id="1_81d2y"]
[ext_resource type="Texture2D" uid="uid://ciffitw4du54g" path="res://textures/items/scissor_blade.png" id="2_m3ule"]

[sub_resource type="CircleShape2D" id="CircleShape2D_niput"]
radius = 6.0

[node name="scissors" type="Area2D"]
script = ExtResource("1_81d2y")

[node name="upper_blade" type="Sprite2D" parent="."]
rotation = -0.785398
texture = ExtResource("2_m3ule")
offset = Vector2(7, 0)
flip_v = true

[node name="lower_blade" type="Sprite2D" parent="."]
rotation = 0.785398
texture = ExtResource("2_m3ule")
offset = Vector2(7, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_niput")

[connection signal="used" from="." to="." method="_on_used"]
